lab-3-antlr-translator/src/gen/ValyriaParser.java
// Generated from D:/Documents/parsers/Valyria/src\Valyria.g4 by ANTLR 4.x

import java.util.*;
import java.util.stream.*;
import java.lang.StringBuilder;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ValyriaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MODULE=1, INT=2, COMMA=3, B=4, EQ=5, AND=6, OR=7, NOT=8, PLUSMINUS=9, 
		MULDIV=10, COMP=11, NEQ=12, DOT=13, IF=14, ELSE=15, SL=16, SR=17, PL=18, 
		PR=19, NUMBER=20, RARR=21, IDENTIFIER=22;
	public static final String[] tokenNames = {
		"<INVALID>", "'module'", "'Int'", "','", "B", "'='", "'&&'", "'||'", "'!'", 
		"PLUSMINUS", "MULDIV", "COMP", "'/='", "'.'", "'if'", "'else'", "'['", 
		"']'", "'('", "')'", "NUMBER", "'->'", "IDENTIFIER"
	};
	public static final int
		RULE_program = 0, RULE_functionList = 1, RULE_function = 2, RULE_typeDesc = 3, 
		RULE_pType = 4, RULE_rType = 5, RULE_paramsList = 6, RULE_expr = 7, RULE_funCall = 8, 
		RULE_boolExpr = 9, RULE_conjunction = 10, RULE_neg = 11, RULE_compExpr = 12, 
		RULE_arithExpr = 13, RULE_mul = 14, RULE_factor = 15, RULE_callParams = 16, 
		RULE_callParam = 17, RULE_qualifiedName = 18, RULE_packageName = 19, RULE_comp = 20;
	public static final String[] ruleNames = {
		"program", "functionList", "function", "typeDesc", "pType", "rType", "paramsList", 
		"expr", "funCall", "boolExpr", "conjunction", "neg", "compExpr", "arithExpr", 
		"mul", "factor", "callParams", "callParam", "qualifiedName", "packageName", 
		"comp"
	};

	@Override
	public String getGrammarFileName() { return "Valyria.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	int offset;
	String packageName;
	String className;

	Map<String, String> functions;
	Map<String, List<Type>> paramTypes;
	Map<String, List<String>> paramNames;
	Map<String, Type> returnTypes;

	String fName;
	StringBuilder fBody;
	List<Type> fParams;
	List<String> fParamNames;
	Type fReturnType;

	Type lastTypeDesc;

	String getClassName() {
	    return className;
	}

	String getPackage() {
	    return packageName;
	}

	String getCode() {
	    StringBuilder sb = new StringBuilder();
	    header(sb);

	    for (Map.Entry<String, String> fun : functions.entrySet()) {
	        String name = fun.getKey();
	        List<String> params = paramNames.get(name);
	        List<Type> types = paramTypes.get(name);
	        if (name.equals("main")) {
	            if (paramNames.get("main").size() != 0) {
	                throw new RuntimeException("main function should take no arguments");
	            }
	            sb.append("    public static void main(String[] __args) throws Throwable {\n");
	        } else {
	            sb.append("    public static BigInteger ").append(name).append("(");

	            for (int i = 0; i < params.size(); i++) {
	                if (i > 0) {
	                    sb.append(", ");
	                }
	                Type t = types.get(i);
	                sb.append(t.typeId == Type.INT ? "BigInteger " : "MethodHandle ").append(params.get(i));
	            }

	            sb.append(") throws Throwable {\n");
	        }
	        sb.append(fun.getValue());
	        sb.append("    }\n");
	    }

	    offset--;
	    sb.append("}");
	    return sb.toString();
	}

	String off() {
	    StringBuilder sb = new StringBuilder();
	    for (int i = 0; i < offset; i++) {
	        sb.append("    ");
	    }
	    return sb.toString();
	}

	void header(StringBuilder sb) {
	    offset = 0;
	    if (packageName != null && !"".equals(packageName)) {
	        sb.append("package ").append(packageName.substring(0, packageName.length() - 1)).append(";\n");
	    }

	    sb.append("import java.lang.invoke.*;\n");
	    sb.append("import java.math.BigInteger;\n");
	    sb.append("import static stdlib.Util.*;\n");
	    sb.append("import stdlib.*;\n");
	    sb.append("import java.util.*;\n\n");
	    sb.append("public class ").append(className).append("{\n");
	    offset++;
	    sb.append(off()).append("private static Map<String, MethodHandle> __functions;\n");
	    sb.append(off()).append("static {\n");
	    offset++;
	    sb.append(off()).append("__functions = new HashMap<>();\n");
	    sb.append(off())
	        .append("MethodHandles.Lookup __lookup = MethodHandles.lookup();\n")
	        .append(off())
	        .append("try {\n");

	    offset++;

	    sb.append(off()).append("__functions.put(\"print\", ")
	        .append("__lookup.findStatic(Util.class, \"print\", MethodType.methodType(BigInteger.class, Object.class)));\n")
	        .append(off()).append("__functions.put(\"read\", ")
	        .append("__lookup.findStatic(Util.class, \"read\", MethodType.methodType(BigInteger.class)));\n");

	    for (String name : functions.keySet()) {
	        if (name.equals("main")) {
	            continue;
	        }
	        List<Type> params = paramTypes.get(name);
	        String lookupType = params.stream()
	            .map(t -> t.typeId == Type.INT ? "BigInteger.class" : "MethodHandle.class")
	            .collect(Collectors.joining(", "));

	        sb.append(off()).append("__functions.put(\"").append(name).append("\", ");

	        sb.append("__lookup.findStatic(")
	            .append(className)
	            .append(".class, \"")
	            .append(name)
	            .append("\", MethodType.methodType(")
	            .append("BigInteger.class, ")
	            .append(lookupType)
	            .append(")));\n");
	    }
	    offset--;
	    sb.append(off()).append("} catch (Exception e) { throw new AssertionError(); }\n");
	    offset--;
	    sb.append(off()).append("}\n");
	}

	void init() {
	    functions = new HashMap<>();
	    paramTypes = new HashMap<>();
	    List<Type> specialParams = new ArrayList<>();
	    specialParams.add(Type.integer());
	    paramTypes.put("print", specialParams);
	    paramTypes.put("read", new ArrayList<>());
	    
	    paramNames = new HashMap<>();
	    List<String> specialParamNames = new ArrayList<>();
	    specialParamNames.add("o");
	    paramNames.put("print", specialParamNames);
	    paramNames.put("read", new ArrayList<>());
	    
	    returnTypes = new HashMap<>();
	    returnTypes.put("print", Type.integer());
	    returnTypes.put("read", Type.integer());
	    
	    offset = 1;
	}

	String muldiv(String text) {
	    switch(text) {
	        case "*":
	            return "multiply";
	        case "/":
	            return "divide";
	        case "%":
	            return "mod";
	    }
	    throw new AssertionError();
	}

	public ValyriaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode MODULE() { return getToken(ValyriaParser.MODULE, 0); }
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public FunctionListContext functionList() {
			return getRuleContext(FunctionListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValyriaVisitor ) return ((ValyriaVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{

			    init();

			setState(43); match(MODULE);
			setState(44); qualifiedName();
			setState(45); functionList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionListContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public FunctionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterFunctionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).exitFunctionList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValyriaVisitor ) return ((ValyriaVisitor<? extends T>)visitor).visitFunctionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionListContext functionList() throws RecognitionException {
		FunctionListContext _localctx = new FunctionListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_functionList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PL) {
				{
				{
				setState(47); function();
				}
				}
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ParamsListContext paramsList() {
			return getRuleContext(ParamsListContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(ValyriaParser.IDENTIFIER, 0); }
		public TypeDescContext typeDesc() {
			return getRuleContext(TypeDescContext.class,0);
		}
		public TerminalNode EQ() { return getToken(ValyriaParser.EQ, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValyriaVisitor ) return ((ValyriaVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53); typeDesc();

			    fParams = lastTypeDesc.getParams();
			    fReturnType = lastTypeDesc.getReturnType();

			setState(55); ((FunctionContext)_localctx).IDENTIFIER = match(IDENTIFIER);

			    fName = (((FunctionContext)_localctx).IDENTIFIER!=null?((FunctionContext)_localctx).IDENTIFIER.getText():null);
			    fBody = new StringBuilder();
			    fParamNames = new ArrayList<String>();

			setState(57); paramsList();

			    if (fParams.size() != fParamNames.size()) {
			        throw new RuntimeException("Parameters and signature for function " + fName + " do not match");
			    }

			    paramTypes.put(fName, fParams);
			    paramNames.put(fName, fParamNames);
			    offset++;
			    fBody.append(off()).append("BigInteger __res;\n");

			setState(59); match(EQ);
			setState(60); expr(false);

			    if (!(((FunctionContext)_localctx).IDENTIFIER!=null?((FunctionContext)_localctx).IDENTIFIER.getText():null).equals("main")) {
			        fBody.append(off()).append("return __res;\n");
			    }
			    functions.put(fName, fBody.toString());
			    offset--;

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDescContext extends ParserRuleContext {
		public RTypeContext rType() {
			return getRuleContext(RTypeContext.class,0);
		}
		public List<PTypeContext> pType() {
			return getRuleContexts(PTypeContext.class);
		}
		public TerminalNode RARR() { return getToken(ValyriaParser.RARR, 0); }
		public PTypeContext pType(int i) {
			return getRuleContext(PTypeContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ValyriaParser.COMMA); }
		public TerminalNode PL() { return getToken(ValyriaParser.PL, 0); }
		public TerminalNode PR() { return getToken(ValyriaParser.PR, 0); }
		public TerminalNode COMMA(int i) {
			return getToken(ValyriaParser.COMMA, i);
		}
		public TypeDescContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDesc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterTypeDesc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).exitTypeDesc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValyriaVisitor ) return ((ValyriaVisitor<? extends T>)visitor).visitTypeDesc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeDescContext typeDesc() throws RecognitionException {
		TypeDescContext _localctx = new TypeDescContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDesc);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{

			    List<Type> paramList = new ArrayList<>();
			    Type[] returnType = new Type[1];

			setState(64); match(PL);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INT || _la==PL) {
				{
				{
				setState(65); pType(paramList);
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(66); match(COMMA);
					setState(67); pType(paramList);
					}
					}
					setState(72);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78); match(PR);
			setState(79); match(RARR);
			setState(80); rType(returnType);

			    if (returnType[0] == null) {
			        throw new AssertionError();
			    }
			    lastTypeDesc = Type.function(returnType[0], paramList);

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PTypeContext extends ParserRuleContext {
		public List<Type> paramList;
		public TerminalNode INT() { return getToken(ValyriaParser.INT, 0); }
		public TypeDescContext typeDesc() {
			return getRuleContext(TypeDescContext.class,0);
		}
		public TerminalNode PL() { return getToken(ValyriaParser.PL, 0); }
		public TerminalNode PR() { return getToken(ValyriaParser.PR, 0); }
		public PTypeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public PTypeContext(ParserRuleContext parent, int invokingState, List<Type> paramList) {
			super(parent, invokingState);
			this.paramList = paramList;
		}
		@Override public int getRuleIndex() { return RULE_pType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterPType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).exitPType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValyriaVisitor ) return ((ValyriaVisitor<? extends T>)visitor).visitPType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PTypeContext pType(List<Type> paramList) throws RecognitionException {
		PTypeContext _localctx = new PTypeContext(_ctx, getState(), paramList);
		enterRule(_localctx, 8, RULE_pType);
		try {
			setState(90);
			switch (_input.LA(1)) {
			case INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(83); match(INT);
				 paramList.add(Type.integer()); 
				}
				break;
			case PL:
				enterOuterAlt(_localctx, 2);
				{
				setState(85); match(PL);
				setState(86); typeDesc();
				 paramList.add(lastTypeDesc); 
				setState(88); match(PR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RTypeContext extends ParserRuleContext {
		public Type[] returnType;
		public TerminalNode INT() { return getToken(ValyriaParser.INT, 0); }
		public RTypeContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public RTypeContext(ParserRuleContext parent, int invokingState, Type[] returnType) {
			super(parent, invokingState);
			this.returnType = returnType;
		}
		@Override public int getRuleIndex() { return RULE_rType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterRType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).exitRType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValyriaVisitor ) return ((ValyriaVisitor<? extends T>)visitor).visitRType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RTypeContext rType(Type[] returnType) throws RecognitionException {
		RTypeContext _localctx = new RTypeContext(_ctx, getState(), returnType);
		enterRule(_localctx, 10, RULE_rType);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92); match(INT);
			 returnType[0] = Type.integer(); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsListContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public TerminalNode IDENTIFIER(int i) {
			return getToken(ValyriaParser.IDENTIFIER, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(ValyriaParser.IDENTIFIER); }
		public ParamsListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramsList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterParamsList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).exitParamsList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ValyriaVisitor ) return ((ValyriaVisitor<? extends T>)visitor).visitParamsList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsListContext paramsList() throws RecognitionException {
		ParamsListContext _localctx = new ParamsListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_paramsList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(95); ((ParamsListContext)_localctx).IDENTIFIER = match(IDENTIFIER);

				    fParamNames.add((((ParamsListContext)_localctx).IDENTIFIER!=null?((ParamsListContext)_localctx).IDENTIFIER.getText():null));

				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public boolean in;
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public TerminalNode IF() { return getToken(ValyriaParser.IF, 0); }
		public FunCallContext funCall() {
			return getRuleContext(FunCallContext.class,0);
		}
		public TerminalNode ELSE() { return getToken(ValyriaParser.ELSE, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public TerminalNode SR() { return getToken(ValyriaParser.SR, 0); }
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode PL() { return getToken(ValyriaParser.PL, 0); }
		public TerminalNode PR() { return getToken(ValyriaParser.PR, 0); }
		public TerminalNode SL() { return getToken(ValyriaParser.SL, 0); }
		public ExprContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ExprContext(ParserRuleContext parent, int invokingState, boolean in) {
			super(parent, invokingState);
			this.in = in;
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ValyriaListener ) ((ValyriaListener)listener).enterExpr(this);
		}
		@Override
